--- a/contact.html
+++ b/contact.html
@@ -37,14 +37,12 @@
             <h2>Email:</h2>
             <p><a href="mailto:inquiries@polloalabrasa.com" target="blank">inquiries@polloalabrasa.com</a></p>
             <h2>Address:</h2>
-            <p>8199 Welby Road</p>
-            <p>Suite 3503</p>
-            <p>Denver, CO, 80229</p>
+            <p>1234 Avenida Cusco</p>
+            <p>Lima, Peru 12345</p>
         </main>
 
-        <span id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3063.273929021949!2d-104.96100792394479!3d39.84569387153708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c773e96c8ebf5%3A0xb00e3b874f744fa6!2s8199%20Welby%20Rd%2C%20Thornton%2C%20CO%2080229!5e0!3m2!1sen!2sus!4v1710045766943!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </span>   
+        <span id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d499487.73502849106!2d-77.31744079740966!3d-12.026445026406154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c5f619ee3ec7%3A0x14206cb9cc452e4a!2sLima%2C%20Peru!5e0!3m2!1sen!2sus!4v1725739047401!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </span>   
     </body>
 
     <footer>
